chore(fw): change IOC processor to stm32g070

--- a/fw/stm32g0/stm32g0.ioc
+++ b/fw/stm32g0/stm32g0.ioc
@@ -46,7 +46,7 @@ I2C1.I2C_Speed_Mode=I2C_Standard
 I2C1.IPParameters=Timing,CustomTiming,I2C_Speed_Mode
 I2C1.Timing=0x10B17DB5
 KeepUserPlacement=false
-Mcu.CPN=STM32G030K8T6
+Mcu.CPN=STM32G070KBT6
 Mcu.Family=STM32G0
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
@@ -59,7 +59,7 @@ Mcu.IP7=TIM3
 Mcu.IP8=TIM16
 Mcu.IP9=USART2
 Mcu.IPNb=10
-Mcu.Name=STM32G030K(6-8)Tx
+Mcu.Name=STM32G070KBTx
 Mcu.Package=LQFP32
 Mcu.Pin0=PB9
 Mcu.Pin1=PC14-OSC32_IN (PC14)
@@ -88,7 +88,7 @@ Mcu.Pin9=PC6
 Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32G030K8Tx
+Mcu.UserName=STM32G070KBTx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -180,7 +180,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32G030K8Tx
+ProjectManager.DeviceId=STM32G070KBTx
 ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -254,4 +254,3 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
-isbadioc=true
