--- a/fw/stm32g0/stm32g0.ioc
+++ b/fw/stm32g0/stm32g0.ioc
@@ -1,4 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SelectedChannel,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
+ADC1.SelectedChannel=ADC_CHANNEL_8
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -38,7 +45,43 @@ Dma.I2C1_TX.1.SyncRequestNumber=1
 Dma.I2C1_TX.1.SyncSignalID=NONE
 Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
-Dma.RequestsNb=2
+Dma.Request2=TIM1_CH2
+Dma.Request3=TIM3_CH1
+Dma.RequestsNb=4
+Dma.TIM1_CH2.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH2.2.EventEnable=DISABLE
+Dma.TIM1_CH2.2.Instance=DMA1_Channel3
+Dma.TIM1_CH2.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH2.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH2.2.Mode=DMA_NORMAL
+Dma.TIM1_CH2.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH2.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH2.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM1_CH2.2.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH2.2.RequestNumber=1
+Dma.TIM1_CH2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM1_CH2.2.SignalID=NONE
+Dma.TIM1_CH2.2.SyncEnable=DISABLE
+Dma.TIM1_CH2.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM1_CH2.2.SyncRequestNumber=1
+Dma.TIM1_CH2.2.SyncSignalID=NONE
+Dma.TIM3_CH1.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM3_CH1.3.EventEnable=DISABLE
+Dma.TIM3_CH1.3.Instance=DMA1_Channel4
+Dma.TIM3_CH1.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH1.3.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH1.3.Mode=DMA_NORMAL
+Dma.TIM3_CH1.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH1.3.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH1.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM3_CH1.3.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH1.3.RequestNumber=1
+Dma.TIM3_CH1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM3_CH1.3.SignalID=NONE
+Dma.TIM3_CH1.3.SyncEnable=DISABLE
+Dma.TIM3_CH1.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM3_CH1.3.SyncRequestNumber=1
+Dma.TIM3_CH1.3.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.CustomTiming=Disabled
@@ -48,49 +91,56 @@ I2C1.Timing=0x10B17DB5
 KeepUserPlacement=false
 Mcu.CPN=STM32G070KBT6
 Mcu.Family=STM32G0
-Mcu.IP0=DMA
-Mcu.IP1=I2C1
-Mcu.IP2=IWDG
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM3
-Mcu.IP8=TIM16
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=USART2
+Mcu.IP2=I2C1
+Mcu.IP3=IWDG
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM3
+Mcu.IP9=TIM16
+Mcu.IPNb=11
 Mcu.Name=STM32G070KBTx
 Mcu.Package=LQFP32
 Mcu.Pin0=PB9
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14-BOOT0
-Mcu.Pin12=PA15
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=PB8
-Mcu.Pin19=VP_IWDG_VS_IWDG
+Mcu.Pin10=PA9
+Mcu.Pin11=PC6
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11 [PA9]
+Mcu.Pin14=PA12 [PA10]
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14-BOOT0
+Mcu.Pin17=PA15
+Mcu.Pin18=PB3
+Mcu.Pin19=PB4
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=VP_IWDG_VS_IWDG
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin3=PA3
-Mcu.Pin4=PA6
-Mcu.Pin5=PB1
-Mcu.Pin6=PB2
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PC6
-Mcu.PinsNb=24
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB2
+Mcu.Pin9=PA8
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G070KBTx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
+NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -99,6 +149,18 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=DEBUG_1
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11\ [PA9].GPIOParameters=GPIO_Label
+PA11\ [PA9].GPIO_Label=DEBUG_2
+PA11\ [PA9].Locked=true
+PA11\ [PA9].Signal=GPIO_Output
+PA12\ [PA10].GPIOParameters=GPIO_Label
+PA12\ [PA10].GPIO_Label=DEBUG_3
+PA12\ [PA10].Locked=true
+PA12\ [PA10].Signal=GPIO_Output
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
@@ -119,6 +181,10 @@ PA3.GPIO_Label=DEBUG_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=DEBUG_PORT_SPARE
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=BUZZER
 PA6.Locked=true
@@ -131,6 +197,11 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=LED_DATA
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=MIC_AIN
+PB0.Locked=true
+PB0.Mode=IN8
+PB0.Signal=ADC1_IN8
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=STATUS_LED1
 PB1.Locked=true
@@ -171,7 +242,7 @@ PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=IR_DATA
 PC6.Locked=true
 PC6.Signal=S_TIM3_CH1
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=-90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
@@ -202,7 +273,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -216,7 +287,7 @@ RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=64000000
 RCC.I2S1Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -227,6 +298,7 @@ RCC.PWRFreq_Value=64000000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USART1Freq_Value=64000000
+RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
 SH.S_TIM16_CH1.0=TIM16_CH1,Output Compare1 CH1
@@ -254,3 +326,4 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
+isbadioc=true
