--- a/fw/stm32g0/stm32g0.ioc
+++ b/fw/stm32g0/stm32g0.ioc
@@ -1,11 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SelectedChannel,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
-ADC1.SelectedChannel=ADC_CHANNEL_8
-ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -91,50 +84,48 @@ I2C1.Timing=0x10B17DB5
 KeepUserPlacement=false
 Mcu.CPN=STM32G070KBT6
 Mcu.Family=STM32G0
-Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP10=USART2
-Mcu.IP2=I2C1
-Mcu.IP3=IWDG
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IP9=TIM16
-Mcu.IPNb=11
+Mcu.IP0=DMA
+Mcu.IP1=I2C1
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM3
+Mcu.IP8=TIM16
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32G070KBTx
 Mcu.Package=LQFP32
 Mcu.Pin0=PB9
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA9
-Mcu.Pin11=PC6
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11 [PA9]
-Mcu.Pin14=PA12 [PA10]
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14-BOOT0
-Mcu.Pin17=PA15
-Mcu.Pin18=PB3
-Mcu.Pin19=PB4
+Mcu.Pin10=PC6
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11 [PA9]
+Mcu.Pin13=PA12 [PA10]
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14-BOOT0
+Mcu.Pin16=PA15
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB5
 Mcu.Pin2=PA2
-Mcu.Pin20=PB5
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=PB8
-Mcu.Pin24=VP_IWDG_VS_IWDG
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=PB8
+Mcu.Pin23=VP_IWDG_VS_IWDG
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB2
-Mcu.Pin9=PA8
-Mcu.PinsNb=29
+Mcu.Pin6=PB1
+Mcu.Pin7=PB2
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G070KBTx
@@ -184,7 +175,7 @@ PA3.Signal=USART2_RX
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=DEBUG_PORT_SPARE
 PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA5.Signal=USART3_TX
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=BUZZER
 PA6.Locked=true
@@ -197,11 +188,6 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=LED_DATA
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=MIC_AIN
-PB0.Locked=true
-PB0.Mode=IN8
-PB0.Signal=ADC1_IN8
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=STATUS_LED1
 PB1.Locked=true
@@ -326,4 +312,3 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
-isbadioc=true
