--- a/fw/stm32g0/stm32g0.ioc
+++ b/fw/stm32g0/stm32g0.ioc
@@ -99,33 +99,34 @@ Mcu.Name=STM32G070KBTx
 Mcu.Package=LQFP32
 Mcu.Pin0=PB9
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PC6
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11 [PA9]
-Mcu.Pin13=PA12 [PA10]
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14-BOOT0
-Mcu.Pin16=PA15
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB5
+Mcu.Pin10=PA9
+Mcu.Pin11=PC6
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11 [PA9]
+Mcu.Pin14=PA12 [PA10]
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14-BOOT0
+Mcu.Pin17=PA15
+Mcu.Pin18=PB3
+Mcu.Pin19=PB4
 Mcu.Pin2=PA2
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=PB8
-Mcu.Pin23=VP_IWDG_VS_IWDG
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=VP_IWDG_VS_IWDG
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin3=PA3
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PB1
-Mcu.Pin7=PB2
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=28
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PB1
+Mcu.Pin8=PB2
+Mcu.Pin9=PA8
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G070KBTx
@@ -163,15 +164,19 @@ PA15.GPIO_Label=BTN_O
 PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=DEBUG_TX
+PA2.GPIO_Label=CTRL_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=DEBUG_RX
+PA3.GPIO_Label=CTRL_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=CTRL_EN
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=DEBUG_PORT_SPARE
 PA5.Locked=true
@@ -259,7 +264,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -312,3 +317,4 @@ VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
+isbadioc=true
